# markdown-eye

./: CLAUDE.md  Cargo.toml  README.md
examples/: lorem.md
src/: main.rs
